--- a/popup.html
+++ b/popup.html
@@ -1,33 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Chat Bot</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-
-      .chat-bot-container {
-        bottom: 20px;
-        right: 20px;
-        background-color: #f0f0f0;
-        padding: 10px;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-
-      .chat-bot-input {
-        margin-top: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="chat-bot-container" id="botContainer">
-      <h1>Chat Bot</h1>
-      <input id="userInput" type="text" class="chat-bot-input" placeholder="Type a message..." />
-      <p id="botResponse"></p>
-    </div>
-    <script src="popup.js"></script>
-  </body>
+<head>
+  <title>VinUni Chatbot</title>
+  <link rel="stylesheet" href="popup.css">
+  <script src="popup.js"></script>
+</head>
+<body>
+  <!-- Chatbot icon -->
+  <div id="chatbot-icon" class="floating-icon">Chatbot</div>
+</body>
 </html>
