--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,7 +10,7 @@
         margin: 0;
         padding: 0;
       }
-      .chatbot-button {
+      /* .chatbot-button {
       position: fixed;
       top: 20px;
       right: 20px;
@@ -26,7 +26,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      }
+      } */
       iframe {
         width: 100%;
         height: 100%;
@@ -35,12 +35,12 @@
     </style>
   </head>
   <body>
-    <button class="chatbot-button">C</button>
+    <button id="chatbotButton" class="chatbot-button">C</button>
     <iframe
       id="openai-iframe"
       src="https://chat.openai.com/chat"
       frameborder="0"
     ></iframe>
-    <script src="contentScripts.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
