--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,23 +10,9 @@
         margin: 0;
         padding: 0;
       }
-      /* .chatbot-button {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      width: 48px;
-      height: 48px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 50%;
-      font-size: 24px;
-      cursor: pointer;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      } */
+      .hidden {
+        display: none;
+      }
       iframe {
         width: 100%;
         height: 100%;
@@ -35,7 +21,6 @@
     </style>
   </head>
   <body>
-    <button id="chatbotButton" class="chatbot-button">C</button>
     <iframe
       id="openai-iframe"
       src="https://chat.openai.com/chat"
