--- a/sidepanel/popup.html
+++ b/sidepanel/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title>ChatGPT Popup</title>
     <meta charset="UTF-8" />
     <style>
@@ -18,13 +19,21 @@
         height: 100%;
         border: none;
       }
+      .chatbox {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
     <iframe
       id="openai-iframe"
-      src="https://chat.openai.com/chat"
+      src="https://huggingface.co/chat/"
       frameborder="0"
+      class="chatbox"
     ></iframe>
     <script src="popup.js"></script>
   </body>
