--- a/sidepanel/popup.html
+++ b/sidepanel/popup.html
@@ -35,6 +35,6 @@
       frameborder="0"
       class="chatbox"
     ></iframe>
-    <script src="popup.js"></script>
+    <!-- <script src="popup.js"></script> -->
   </body>
 </html>
